tests/compile_fail/test_bvec_drop_check.rs
fn main() {
    let mut x = btreevec::BTreeVec::<&str>::new();
    {
        let s = String::from("Hello!");
        x.push_back(s.as_str());
    }
}